--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.3
   uuid: ^4.5.2
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
