--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,14 @@ dependencies:
   image_picker: ^1.2.1
   http: ^1.6.0
   speech_to_text: ^6.3.0
-  google_generative_ai: ^0.4.7
   flutter_animate: ^4.2.0
   path_provider: ^2.0.15
+  flutter_local_notifications: ^19.5.0
+  audioplayers: ^6.5.1
+  timezone: ^0.10.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
